--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div>
                     <h2>¿Qué es HTML?</h2>
                     <img src="imagenes/Html5.png" width="100px" height="90px">
-                    <p>Es un lenjuage que se utiliza para la creación de páginas en la WWW</p>
+                    <p>Es un lenguaje que se utiliza para la creación de páginas en la WWW</p>
                 </div>
             </td>
         </tr>
